refact: 상품 목록 조회 방식 페이징 처리로 리팩토링